test/typechecker.d/invalid/fns0.surc.bad
n = 5

f(x: Integer): Integer = fndo
	if 4
		return 3
	return 3
